myteo/test/parser/ast/toplevel/malformed_error.exp
ERROR: test/parser/ast/toplevel/malformed_error.myte:3:0 Unexpected token "if", expected start of top level statement
 3 | if (true) {}
   | ^^